# STXETX_Library

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  cmake_install.cmake
include/: stxetx_defines.h  stxetx_protocol.h
src/: main.c  stxetx_protocol.c
